fixes spacing and headings on every page

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,6 +7,6 @@ input.form-control, textarea.form-control {
 #map { 
   top: 0; 
   bottom: 0; 
-  width: 300px; 
+  width: 100%; 
   height: 300px; 
 }
